--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>01_helloworld</module>
         <module>02_work</module>
+        <module>03_fanout</module>
     </modules>
 
     <dependencies>
