--- a/03_fanout/pom.xml
+++ b/03_fanout/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>03_fanout</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>01_helloworld</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
